@@ -109,8 +109,10 @@ fread( void *ptr, size_t object_size, size_t num_objects, FILE *stream )
     } // while
 
     if (err) {
-        real_stream->set_error( err );
-        errno = err;
+        if (err != EAGAIN) {
+            real_stream->set_error( err );
+            errno = err;
+        }
     } // if
     
     // we return the number of _objects_ read. Simple division is
